fixed font spacing

--- a/res/about.css
+++ b/res/about.css
@@ -47,6 +47,7 @@ body {
     margin-bottom: 0;
     font-family: "Bai Jamjuree", sans-serif;
     color: #333333;
+    line-height: 1.5em;
     font-size: 1.2em;
     font-weight: 300;
 }
