--- a/res/work.css
+++ b/res/work.css
@@ -158,6 +158,7 @@ body {
 #section2 li {
     font-family: "Bai Jamjuree", sans-serif;
     color: #333333;
+    line-height: 1.5em;
     font-size: 1.2em;
     font-weight: 300;
     margin-left: 1.8em;
